don't eval instead of comments in the vignette

--- a/vignettes/signatureFinder.Rmd
+++ b/vignettes/signatureFinder.Rmd
@@ -6,9 +6,9 @@ output: html_document
 ---
 #Intall
 
-```{r}
-#library(devtools)
-#install_github("lapinskam/SignatureFinder")
+```{r, eval=FALSE}
+library(devtools)
+install_github("lapinskam/SignatureFinder")
 ```
 
 
